--- a/index.html
+++ b/index.html
@@ -3,9 +3,10 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>www1</title>
 </head>
 <body>
     
+    <h1> Strona główna </h1>
 </body>
 </html>
