dodano 3 akapity i sformatowano

--- a/index.html
+++ b/index.html
@@ -4,9 +4,13 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>www1</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
     
     <h1> Strona główna </h1>
+    <p> Akapit1</p>
+    <p> Akapit2</p>
+    <p> Akapit3</p>
 </body>
 </html>
